gitProperties bean add hibernate envers
