# business/src/main/java/com/devatlant/todo/business/entity/Todo.java
@@ -6,12 +6,17 @@ import lombok.Data;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+import org.hibernate.annotations.UpdateTimestamp;
+import org.hibernate.annotations.CreationTimestamp;
+import org.hibernate.envers.Audited;
+import java.time.OffsetDateTime;
 
 @Entity
 @Data
 @NoArgsConstructor
 @Setter
 @Getter
+@Audited
 public class Todo{
     @Id
     @GeneratedValue(strategy = GenerationType.SEQUENCE)
@@ -22,4 +27,11 @@ public class Todo{
 
     @Column(name = "is_completed")
     private Boolean isCompleted;
+
+    @CreationTimestamp
+    @Column(updatable = false, name = "created_at")
+    private OffsetDateTime createdAt;
+    @UpdateTimestamp
+    @Column(name = "updated_at")
+    private OffsetDateTime updatedAt;
 }
